# kowalski

./: .dockerignore  BUILD_AND_TEST_GUIDE.md  BUILD_IMPROVEMENTS_SUMMARY.md  BUILD_OPTIMIZATION.md  BUILD_QUICK_REFERENCE.md  BUILD_TEST_STATUS.md  CARGO_BUILD_CACHING_GUIDE.md  COMPREHENSIVE_BUG_AND_MEMORY_REVIEW.md  Cargo.toml  DESIGN_PACKAGE_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_ROADMAP.md  KOWALSKI_EXO_DESIGN.md  KOWALSKI_EXO_INTEGRATION_SUMMARY.md  KOWALSKI_EXO_REQUIREMENTS.md  KOWALSKI_EXO_TASKS.md  Makefile  PHASE_2_STATUS.txt  PHASE_3_FINAL_SUMMARY.txt  PHASE_4_DELIVERABLES.txt  PRODUCTION_FIXES_SUMMARY.md  PROJECT_ASSESSMENT.md  QUICK_BUILD_GUIDE.md  README.md  README_DESIGN_PACKAGE.txt  REVIEW_SUMMARY.md  RLM_COMPREHENSIVE_REVIEW.md  RLM_REVIEW_COMPLETE.md  RLM_REVIEW_SUMMARY.txt  RLM_VERIFICATION_CHECKLIST.md  TEST_VALIDATION_PLAN.md  build.sh  config.toml  test-build.sh  verify-project.sh
.cargo/: config.toml
.github/workflows/: optimized-build.yml
benchmark/scenario5a_sub_llm_batch/: Cargo.toml  main.rs
benchmark/scenario5b_repl_exec/: Cargo.toml  main.rs
benchmark/scenario5c_context_fold/: Cargo.toml  main.rs
benchmark/scenario5d_tool_invoke/: Cargo.toml  main.rs
k8s/: configmap.yaml  deployment-coordinator.yaml  deployment-workers.yaml  ingress.yaml  namespace.yaml  rbac.yaml  service.yaml
kowalski-academic-agent/src/: agent.rs
kowalski-agent-template/src/: config.rs
kowalski-cli/: Cargo.toml
kowalski-cli/src/: main.rs
kowalski-code-agent/src/: agent.rs  config.rs  lib.rs  parser.rs
kowalski-code-agent/tests/: execution_integration_tests.rs
kowalski-core/src/: config.rs  conversation_manager.rs  lib.rs
kowalski-core/tests/: rlm_integration_tests.rs
kowalski-data-agent/src/: agent.rs  config.rs
kowalski-federation/: Cargo.toml
kowalski-federation/src/: agent.rs  agent_selector.rs  batch_executor.rs  batch_scheduler.rs  depth_controller.rs  error.rs  lib.rs  message.rs  orchestrator.rs
kowalski-federation/tests/: batch_integration_tests.rs  (+1 more)
kowalski-rlm/: Cargo.toml  README.md
kowalski-rlm/docs/: advanced_usage.md  api_overview.md  getting_started.md  troubleshooting.md
kowalski-rlm/examples/: basic_rlm.rs  batch_execution.rs  custom_agents.rs  deep_recursion.rs  with_federation.rs
kowalski-rlm/src/: builder.rs  code_block_parser.rs  config.rs  context.rs  context_fold.rs  device_health.rs  error.rs  executor.rs  exo_cluster_manager.rs  lib.rs  remote_repl_executor.rs  repl_executor.rs  smart_scheduler.rs
kowalski-rlm/src/core/: mod.rs
kowalski-rlm/src/federation/: mod.rs
kowalski-rlm/tests/: exo_integration_tests.rs  integration_tests.rs  phase4_integration_tests.rs
(+20 files in other folders)
