[package]
name = "benchmark_s5b_repl_exec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark_s5b_repl_exec"
path = "main.rs"

[dependencies]
kowalski-rlm = { path = "../../kowalski-rlm" }
kowalski-code-agent = { path = "../../kowalski-code-agent" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
